--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.36.0",
+    "react": "^15.4.0",
+    "react-native": "^0.38.0",
     "react-native-drawer": "^2.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
